feat: standardized error messages
Add standardized error messages useful for both validation errors and
server errors.
